--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3009,6 +3009,398 @@ font-size: 1rem;
 }
 
 }
+@media (max-width: 400px){
+    .menu_navegacion {
+        position: fixed;
+        top: 0;
+        right: 0;
+        width: 15rem;
+        height: 100%;
+        align-items:center;
+        transition: transform 0.3s ease-in-out;
+        transform: translate(110%);
+        box-shadow: 0 0 20px rgb(255, 255, 255);
+        font-size: 1rem;
+        z-index: 2;
+        text-transform: uppercase;
+        -webkit-text-stroke: 3rem rgba(255,255,255,0.5);
+        gap: 0.1rem;
+        box-sizing: content-box;
+        box-sizing: border-box;
+        justify-content: space-around;
+        list-style: none;
+    }
+    .menu_navegacion a {
+        position:relative;
+        font-size: 1.2rem;
+        text-decoration: none;
+        line-height: 1.2rem;
+        text-transform: uppercase;
+        -webkit-text-stroke: 0.5px rgba(255,255,255,0.5);
+        color: transparent;
+    }
+    .Button::before{
+        content: attr(data-text);
+        position: absolute;
+        color: var(--clr);
+        width: 0;
+        transition: 1s;
+        overflow: hidden;
+        border-right: 1px solid  var(--clr);
+        -webkit-text-stroke: 1px  var(--clr);
+      }
+      .Button:hover::before{
+        width: 100%;
+        filter: drop-shadow(0px 0px 45px var(--clr));
+      }
+      .spread {
+        transform: translate(0);
+    }
+    .container__toggle {
+        position: relative;
+        top: 0rem;
+        width: 8rem;
+        height: 3.8rem;
+        left: 27rem;
+    }
+    header {
+        height: 75rem;
+    }
+    .container_titulo{
+        width:90%;
+        
+    }
+    .container_titulo > h1 {
+        font-size: 1.5rem;
+        margin: 0;
+        padding: 1rem;
+    }
+    .container_reseña{
+        position: relative;
+        margin: 0;
+        padding: 1rem;
+        width: 100%;
+        height: 4rem;
+        width: 100%;
+        bottom: 2.2rem;
+    }
+    .container_reseña > p {
+        padding: 1rem;
+        font-size: 0.7rem;
+    }
+    .container_img {
+        bottom: 5rem;
+        left: 2.5rem ;
+    }
+    .container_img img{
+        width: 80%;
+        height: 100%;
+    }
+
+    .container_card1 {
+        width: 7rem;
+        height: 3rem;
+        bottom: 30rem;
+        left: -6rem;
+    }
+    .container_card1 > h3{
+        font-size: 0.8rem;
+    }
+    .container_card1 > h3+p{
+        font-size: 0.8rem;
+    }
+    .container_card2 {
+        width: 7rem;
+        height: 3rem;
+        bottom: 20rem;
+        left: 6rem;
+    }
+    .container_card2 > h3{
+        font-size: 0.7rem;
+    }
+    .container_card2 > h3+p{
+        font-size: 0.8rem;
+    }
+    .main {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 20rem;
+        bottom: 20rem;
+    }
+    .main .navigation {
+        position: relative;
+        width: 1rem;
+        height: 1rem;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: 0.5s;
+    }
+    .main .navigation span {
+        position: absolute;
+        width: 15px;
+        height: 15px;
+        background-color: var(--color1);
+        border-radius: 50%;
+        transform: translate(calc(16px * var(--x)), calc(16px * var(--y)));
+        transition: transform 0.5s, width 0.5s, height 0.5s, background 0.5s;
+        transition-delay: calc(0.1s * var(--i));
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        filter: drop-shadow(.3rem .3rem 1rem #ffff);
+    }
+    .main .navigation.active span {
+        width: 5rem;
+        height: 5rem;
+        border-radius: 1rem;
+        background-color: var(--color1);
+        border-radius: 50%;
+        transform: translate(calc(6rem * var(--x)), calc(6rem * var(--y)));
+        filter: drop-shadow(.3rem .3rem 1rem #ffff);
+    }
+    .main .navigation span ion-icon {
+        transition: 0.5s;
+        font-size: 0;
+    }
+    .main .navigation.active span ion-icon {
+        font-size: 2rem;
+        color: var(--Background);
+    }
+    .main .navigation.active span:hover ion-icon {
+        color: var(--color1);
+        font-size: 3rem;
+        filter: drop-shadow(0 0 2px #197f5b) drop-shadow(0 0 3px #197f5b) drop-shadow(0 0 12px #197f5b);
+    }
+    .close {
+        position: absolute;
+        cursor: pointer;
+        width: 10px;
+        height: 10px;
+        background-color: var(--color1);
+        border-radius: 50%;
+        transition: 0.5s;
+        transition-delay: 0.4s;
+        pointer-events: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .main .navigation.active~.close {
+        width: 60px;
+        height: 60px;
+        pointer-events: initial;
+        transition-delay: 0.8s;
+        background: var(--color3);
+    }
+    .main .navigation~.close ion-icon {
+        font-size: 3rem;
+        scale: 0;
+        color: var(--color2);
+        transition: 0.5s;
+    }
+    .main .navigation.active~.close ion-icon {
+        scale: 1;
+        transition-delay: 1s;
+    }
+    .container_colaboracion {
+        width: 90%;
+        height: 16rem;
+        bottom: 23rem;
+    }
+    .container_detalle>h3 {
+        font-size: .7rem;
+    }
+    .container_correo {
+        display: flex;
+        position: relative;
+        width: 90%;
+        height: 3.5rem;
+        top: 6rem;
+    }
+    .mail_bar {
+        position: absolute;
+        display: flex;
+        width: 100%;
+        height: 3rem;
+    }
+    .mail_bar::placeholder{
+        font-size: 1rem;
+    }
+    .boton_mail {
+        display: flex;
+        position: relative;
+        top: 5rem;
+    }
+    .boton_mail>span {
+        font-size: 1rem;
+        color: var(--color2);
+    }
+    .boton_mail:hover {
+        width: 10.2rem;
+        height: 3.5rem;
+    }
+    .about_me {
+        position: relative;
+        top: 2rem;
+        padding: 2rem 4rem;
+        height: 120rem;
+    }
+    .container_about_me{
+        width: 100%;
+    }
+    .container_about_me>h3 {
+        top: -46rem;
+        right: 0rem;
+        font-size: 1.7rem;
+    }
+    .container_parrafo {
+        top: -8rem;
+        width: 80%;
+        height: 18rem;
+        padding: 2rem 2rem;
+        justify-content: center;
+        align-items: center;
+    }
+    .container_parrafo>p {
+        font-size: 1.4rem;
+    }
+    .linea {
+        width: 0.35rem;
+        height: 85rem;
+        left: 2rem;
+        bottom: 27rem;
+    }
+    .container_button {
+        top: 28rem;
+        width: 15.1rem;
+        height: 6rem;
+        left:0rem;
+    }
+    .estudios {
+        height: 60rem;
+        top: -12rem;
+        display: flex;
+    }
+    .container_estudios {
+        width: 100%;
+        height: 40rem;
+        top: 0rem;
+        display: flex;
+        flex-direction: column;
+    }
+    .container_estudios > h3 {
+        top: -1rem;
+    }
+    .container_cards {
+        height: 30rem;
+        width: 80%;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        gap: 3rem;
+    }
+    .card_1{
+        width: 20rem;
+        height: 20rem;
+        position: relative;
+        left: 2rem;
+    }
+    .container_titulacion > h5{
+        font-size: .9rem;
+    }
+    .My_Skills {
+        height: 45rem;
+        top: -20rem;
+    }
+    .Myskills{
+        position: relative;
+        top: 3rem;
+    }
+    .subtitulo_myskills h3{
+        font-size: 1.7rem;
+        bottom: 10rem;
+        left: 3.5rem;
+    }
+    .caja_padre {
+        top: 50%;
+    }
+    .container_Myskills{
+        width: 300px;
+        
+    }
+    .experience {
+        position: relative;
+        height: 120rem;
+        bottom: 24rem;
+        gap: 1rem;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .my_experience {
+        position: relative;
+        top: 1rem;
+        width: 30rem;
+    }
+    .contenedor_logos {
+        width: 80%;
+        flex-wrap: wrap;
+    }
+    .contenedor_card_logo {
+        width: 100%;
+        height: 20rem;
+    }
+    .logo img{
+        width: 5rem;
+        height: 5rem;
+    }
+    .contenedor_card_logo > .name  h4{
+        font-size: 0.7rem;
+    }
+    .subtitulo{
+        font-size: 1.7rem;
+    }
+    .My_portfolio {
+        bottom: 25rem;
+        height: 80rem;
+    }
+    
+.contact {
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    height: 55rem;
+    bottom: 26rem;
+}
+.container_contacto{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    top: 1rem;
+}
+.container_contact_medios {
+    gap: 2rem;
+}
+.contenedor_name_footer{
+    align-items: center;
+    bottom: 15rem;
+}
+.details{
+    bottom: 14rem;
+}
+.details > p{
+font-size: 1rem;
+}
+
+}
 @media (max-width:375px){
     .menu_navegacion {
         position: fixed;
