--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3061,7 +3061,7 @@ font-size: 1rem;
         top: 0rem;
         width: 8rem;
         height: 3.8rem;
-        left: 27rem;
+        left: 28.2rem;
     }
     header {
         height: 75rem;
@@ -3100,8 +3100,8 @@ font-size: 1rem;
     .container_card1 {
         width: 7rem;
         height: 3rem;
-        bottom: 30rem;
-        left: -6rem;
+        bottom: 34rem;
+        left: -8.5rem;
     }
     .container_card1 > h3{
         font-size: 0.8rem;
@@ -3112,8 +3112,8 @@ font-size: 1rem;
     .container_card2 {
         width: 7rem;
         height: 3rem;
-        bottom: 20rem;
-        left: 6rem;
+        bottom: 22rem;
+        left: 8rem;
     }
     .container_card2 > h3{
         font-size: 0.7rem;
@@ -3254,7 +3254,7 @@ font-size: 1rem;
         width: 100%;
     }
     .container_about_me>h3 {
-        top: -46rem;
+        top: -43rem;
         right: 0rem;
         font-size: 1.7rem;
     }
@@ -3298,7 +3298,7 @@ font-size: 1rem;
     }
     .container_cards {
         height: 30rem;
-        width: 80%;
+        width: 90%;
         display: flex;
         flex-wrap: wrap;
         align-items: center;
@@ -3306,10 +3306,16 @@ font-size: 1rem;
         gap: 3rem;
     }
     .card_1{
-        width: 20rem;
+        width: 90%;
         height: 20rem;
         position: relative;
-        left: 2rem;
+        left: 0rem;
+    }
+    .card_2{
+        width: 90%;
+        height: 20rem;
+        position: relative;
+        left: 0rem;
     }
     .container_titulacion > h5{
         font-size: .9rem;
