--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -943,7 +943,351 @@ footer{
 
 /****************************************************RESPONSIVE***************************************************/
 @media (max-width:1400px){
-
+.menu_navegacion {
+        position: fixed;
+        top: 0;
+        right: 0;
+        width: 25rem;
+        height: 100%;
+        align-items:center;
+        transition: transform 0.3s ease-in-out;
+        transform: translate(110%);
+        box-shadow: 0 0 20px rgb(255, 255, 255);
+        font-size: 1rem;
+        z-index: 2;
+        text-transform: uppercase;
+        -webkit-text-stroke: 3rem rgba(255,255,255,0.5);
+        gap: 0.1rem;
+        box-sizing: content-box;
+        box-sizing: border-box;
+        justify-content: space-around;
+        list-style: none;
+    }
+    .menu_navegacion a {
+        position:relative;
+        font-size: 2rem;
+        text-decoration: none;
+        line-height: 2rem;
+        text-transform: uppercase;
+        -webkit-text-stroke: 0.5px rgba(255,255,255,0.5);
+        color: transparent;
+    }
+    .Button::before{
+        content: attr(data-text);
+        position: absolute;
+        color: var(--clr);
+        width: 0;
+        transition: 1s;
+        overflow: hidden;
+        border-right: 1px solid  var(--clr);
+        -webkit-text-stroke: 1px  var(--clr);
+      }
+      .Button:hover::before{
+        width: 100%;
+        filter: drop-shadow(0px 0px 45px var(--clr));
+      }
+      .spread {
+        transform: translate(0);
+    }
+.container__toggle {
+    width: 16rem;
+    height: 3.8rem;
+}
+.toggle {
+    top: .9rem;
+    width: 7rem;
+    left: -70rem;
+    gap: 1.8rem;
+    height: 3.1rem;
+    border-radius: 2rem;
+    font-size: 2rem;
+}
+.ball {
+    width: 2.9rem;
+    height: 2.9rem;
+    border-radius: 2rem; 
+}
+.ball-move {
+    left: 0.3rem;
+}
+.container_titulo {
+    width: 100%;
+    top: 2rem;
+    letter-spacing: 0.2;
+}
+.container_titulo > h1 {
+    font-size: 5rem;
+}
+.container_reseña {
+    width: 60%;
+    height: 10rem;
+    bottom: 3.1rem;
+    padding: 1rem 1rem 1rem 1rem;
+    
+}
+.container_reseña > p {
+    font-size: 2rem;
+}
+.container_img {
+    bottom: 5rem; 
+}
+.main {
+    width: 10.6rem;
+    height: 10.6rem;
+    bottom: 15rem;
+}
+.main .navigation span {
+    position: absolute;
+    width: 0.9rem;
+    height: 0.9rem;
+}
+.main .navigation.active span {
+    width: 6.88rem;
+    height: 6.88rem;
+}
+.main .navigation.active span ion-icon {
+    font-size: 3rem;
+}
+.main .navigation.active span:hover ion-icon {
+    font-size: 4rem;
+}
+.close {
+    width: .8rem;
+    height: .8rem;
+}
+.main .navigation.active~.close {
+    width: 3.75rem;
+    height: 3.75rem;
+}
+.main .navigation~.close ion-icon {
+    font-size: 3rem;
+}
+.container_colaboracion {
+    width: 50rem;
+    height: 12rem;
+    bottom: 8rem;
+    left: 1rem;
+}
+.container_detalle {
+    width: 50rem;
+    height: 3rem;
+    right: -1.2rem;
+    top: 2rem;
+    left: 0;
+}
+.container_detalle>h3 {
+    font-size: 1.5rem;
+}
+.container_correo {
+    width: 50rem;
+    height: 3.5rem;
+    top: 6rem;
+}
+.mail_bar {
+    width: 48rem;
+    height: 3rem;
+}
+.mail_bar::placeholder {
+    font-size: 1.3rem;
+    padding: 2rem;
+}
+.boton_mail {
+    right: 1rem;
+    border-radius: 2rem;
+    width: 10rem;
+    height: 3rem;
+}
+.boton_mail>span {
+    font-size: 1.2rem;
+}
+.boton_mail:hover {
+    width: 10.5rem;
+    height: 3.5rem;
+}
+.container1 {
+    width: 80rem;
+    height: 40rem;
+    right: 58.2rem;
+    top: -50rem;
+}
+.container2 {
+    width: 80rem;
+    height: 40rem;
+    right: -61.2rem;
+    top: -95rem;
+}
+.subtitulo {
+    font-size: 3rem;
+}
+.about_me {
+    top: 10rem;
+    padding: 2rem 4rem;
+    height: 55rem;
+}
+.container_about_me>h3 {
+    top: 2rem;
+    right: 28rem;
+}
+.container_parrafo {
+    top: 2.5rem;
+    height: 18rem;
+    padding: 1rem 2rem;
+}
+.container_parrafo>p {
+    font-size: 1.2rem;
+}
+.linea {
+    width: 0.35rem;
+    height: 21rem;
+    left: 1.5rem;
+    bottom: 19rem;
+}
+.container_button {
+    position: relative;
+    left: 2rem;
+    top: 5rem;
+    width: 18rem;
+    height: 6rem;
+}
+.button {
+    width: 15rem;
+    height: 4.5rem;
+}
+.button span {
+    font-size: 1.3rem;
+}
+.button:hover {
+    width: 17rem;
+    height: 4.9rem;
+}
+.experience {
+    height: 50rem;
+    width: 100%;
+}
+.my_experience {
+    width: 60rem;
+    height: 25rem;
+}
+.my_experience>h3 {
+    bottom: 5rem;
+}
+.contenedor_card_logo {
+    width: 12rem;
+    height: 20rem;
+    bottom: 8rem;
+}
+.My_portfolio {
+    height: 30rem;
+    width: 100%;
+    bottom: 10rem;
+}
+.container_subtitulo {
+    position: relative;
+}
+.container_galeria {
+    width: 100%;
+    height: 30rem;
+    bottom: 0rem;
+    gap: 3rem;
+}
+.container_img1 {
+    position: relative;
+    height: 10rem;
+    width: 10rem;
+}
+.container_img1 img {
+    width: 10rem;
+    height: 10rem;
+}
+.container_img2 {
+    position: relative;
+    height: 10rem;
+    width: 10rem;
+}
+.container_img2 img {
+    width: 10rem;
+    height: 10rem;
+}
+.container_img3 {
+    position: relative;
+    height: 10rem;
+    width: 10rem;
+}
+.container_img3 img {
+    width: 10rem;
+    height: 10rem;
+}
+.container_img4 {
+    position: relative;
+    height: 10rem;
+    width: 10rem;
+}
+.container_img4 img {
+    width: 10rem;
+    height: 10rem;
+}
+.contact {
+    height: 40rem;
+    bottom: 12rem;
+}
+.container_contact_medios {
+    display: flex;
+    flex-wrap: wrap;
+    height: 30rem;
+    justify-content: center;
+    bottom: -5rem;
+    position: relative;
+    gap: 16rem;
+}
+.card_box1{
+    width: 20rem;
+    height: 21rem;
+}
+.phone{
+    width: 8rem;
+    height: 8rem;
+}
+.icon_phone{
+    font-size: 4rem;
+}
+.number_phone{
+    width: 12rem;
+    height: 12rem;
+}
+.card_box2{
+    width: 20rem;
+    height: 21rem;
+}
+.mail {
+    width: 8rem;
+    height: 8rem;
+}
+.icon_mail {
+    font-size: 4rem;
+}
+.electronic_mail {
+    width: 12rem;
+    height: 12rem;
+}
+footer{
+    height: 10rem;
+}
+.contenedor_name_footer{
+    position: relative;
+    bottom: 5rem;
+    height: 5rem;
+}
+.contenedor_name_footer > h2{
+    font-size: 1.5rem;
+}
+.details{
+    position: relative;
+    height: 5rem;
+    bottom: 5rem;
+}
+.details > p{
+    font-size: 1.5rem;
+}
 }
 @media (max-width:1200px){
     .menu_navegacion {
@@ -1292,6 +1636,353 @@ footer{
     font-size: 1.5rem;
 }
 
+}
+@media (max-width:1024px){
+    .menu_navegacion {
+        position: fixed;
+        top: 0;
+        right: 0;
+        width: 25rem;
+        height: 100%;
+        align-items:center;
+        transition: transform 0.3s ease-in-out;
+        transform: translate(110%);
+        box-shadow: 0 0 20px rgb(255, 255, 255);
+        font-size: 1rem;
+        z-index: 2;
+        text-transform: uppercase;
+        -webkit-text-stroke: 3rem rgba(255,255,255,0.5);
+        gap: 0.1rem;
+        box-sizing: content-box;
+        box-sizing: border-box;
+        justify-content: space-around;
+        list-style: none;
+    }
+    .menu_navegacion a {
+        position:relative;
+        font-size: 2rem;
+        text-decoration: none;
+        line-height: 2rem;
+        text-transform: uppercase;
+        -webkit-text-stroke: 0.5px rgba(255,255,255,0.5);
+        color: transparent;
+    }
+    .Button::before{
+        content: attr(data-text);
+        position: absolute;
+        color: var(--clr);
+        width: 0;
+        transition: 1s;
+        overflow: hidden;
+        border-right: 1px solid  var(--clr);
+        -webkit-text-stroke: 1px  var(--clr);
+      }
+      .Button:hover::before{
+        width: 100%;
+        filter: drop-shadow(0px 0px 45px var(--clr));
+      }
+      .spread {
+        transform: translate(0);
+    }
+.container__toggle {
+    width: 16rem;
+    height: 3.8rem;
+}
+.toggle {
+    top: .9rem;
+    width: 7rem;
+    left: -46rem;
+    gap: 1.8rem;
+    height: 3.1rem;
+    border-radius: 2rem;
+    font-size: 2rem;
+}
+.ball {
+    width: 2.9rem;
+    height: 2.9rem;
+    border-radius: 2rem; 
+}
+.ball-move {
+    left: 0.3rem;
+}
+.container_titulo {
+    width: 100%;
+    top: 2rem;
+    letter-spacing: 0.2;
+}
+.container_titulo > h1 {
+    font-size: 5rem;
+}
+.container_reseña {
+    width: 60%;
+    height: 10rem;
+    bottom: 3.1rem;
+    padding: 1rem 1rem 1rem 1rem;
+    
+}
+.container_reseña > p {
+    font-size: 2rem;
+}
+.container_img {
+    bottom: 5rem; 
+}
+.main {
+    width: 10.6rem;
+    height: 10.6rem;
+    bottom: 15rem;
+}
+.main .navigation span {
+    position: absolute;
+    width: 0.9rem;
+    height: 0.9rem;
+}
+.main .navigation.active span {
+    width: 6.88rem;
+    height: 6.88rem;
+}
+.main .navigation.active span ion-icon {
+    font-size: 3rem;
+}
+.main .navigation.active span:hover ion-icon {
+    font-size: 4rem;
+}
+.close {
+    width: .8rem;
+    height: .8rem;
+}
+.main .navigation.active~.close {
+    width: 3.75rem;
+    height: 3.75rem;
+}
+.main .navigation~.close ion-icon {
+    font-size: 3rem;
+}
+.container_colaboracion {
+    width: 50rem;
+    height: 12rem;
+    bottom: 8rem;
+    left: 1rem;
+}
+.container_detalle {
+    width: 50rem;
+    height: 3rem;
+    right: -1.2rem;
+    top: 2rem;
+    left: 0;
+}
+.container_detalle>h3 {
+    font-size: 1.5rem;
+}
+.container_correo {
+    width: 50rem;
+    height: 3.5rem;
+    top: 6rem;
+}
+.mail_bar {
+    width: 48rem;
+    height: 3rem;
+}
+.mail_bar::placeholder {
+    font-size: 1.3rem;
+    padding: 2rem;
+}
+.boton_mail {
+    right: 1rem;
+    border-radius: 2rem;
+    width: 10rem;
+    height: 3rem;
+}
+.boton_mail>span {
+    font-size: 1.2rem;
+}
+.boton_mail:hover {
+    width: 10.5rem;
+    height: 3.5rem;
+}
+.container1 {
+    width: 80rem;
+    height: 40rem;
+    right: 58.2rem;
+    top: -50rem;
+}
+.container2 {
+    width: 80rem;
+    height: 40rem;
+    right: -61.2rem;
+    top: -95rem;
+}
+.subtitulo {
+    font-size: 3rem;
+}
+.about_me {
+    top: 10rem;
+    padding: 2rem 4rem;
+    height: 55rem;
+}
+.container_about_me>h3 {
+    top: 2rem;
+    right: 15rem;
+}
+.container_parrafo {
+    top: 2.5rem;
+    height: 18rem;
+    padding: 1rem 2rem;
+}
+.container_parrafo>p {
+    font-size: 1.2rem;
+}
+.linea {
+    width: 0.35rem;
+    height: 21rem;
+    left: 1.5rem;
+    bottom: 19rem;
+}
+.container_button {
+    position: relative;
+    left: 2rem;
+    top: 5rem;
+    width: 18rem;
+    height: 6rem;
+}
+.button {
+    width: 15rem;
+    height: 4.5rem;
+}
+.button span {
+    font-size: 1.3rem;
+}
+.button:hover {
+    width: 17rem;
+    height: 4.9rem;
+}
+.experience {
+    height: 50rem;
+    width: 100%;
+}
+.my_experience {
+    width: 60rem;
+    height: 25rem;
+}
+.my_experience>h3 {
+    bottom: 5rem;
+}
+.contenedor_card_logo {
+    width: 12rem;
+    height: 20rem;
+    bottom: 8rem;
+}
+.My_portfolio {
+    height: 30rem;
+    width: 100%;
+    bottom: 10rem;
+}
+.container_subtitulo {
+    position: relative;
+}
+.container_galeria {
+    width: 100%;
+    height: 30rem;
+    bottom: 0rem;
+    gap: 3rem;
+}
+.container_img1 {
+    position: relative;
+    height: 10rem;
+    width: 10rem;
+}
+.container_img1 img {
+    width: 10rem;
+    height: 10rem;
+}
+.container_img2 {
+    position: relative;
+    height: 10rem;
+    width: 10rem;
+}
+.container_img2 img {
+    width: 10rem;
+    height: 10rem;
+}
+.container_img3 {
+    position: relative;
+    height: 10rem;
+    width: 10rem;
+}
+.container_img3 img {
+    width: 10rem;
+    height: 10rem;
+}
+.container_img4 {
+    position: relative;
+    height: 10rem;
+    width: 10rem;
+}
+.container_img4 img {
+    width: 10rem;
+    height: 10rem;
+}
+.contact {
+    height: 40rem;
+    bottom: 12rem;
+}
+.container_contact_medios {
+    display: flex;
+    flex-wrap: wrap;
+    height: 30rem;
+    justify-content: center;
+    bottom: -5rem;
+    position: relative;
+    gap: 16rem;
+}
+.card_box1{
+    width: 20rem;
+    height: 21rem;
+}
+.phone{
+    width: 8rem;
+    height: 8rem;
+}
+.icon_phone{
+    font-size: 4rem;
+}
+.number_phone{
+    width: 12rem;
+    height: 12rem;
+}
+.card_box2{
+    width: 20rem;
+    height: 21rem;
+}
+.mail {
+    width: 8rem;
+    height: 8rem;
+}
+.icon_mail {
+    font-size: 4rem;
+}
+.electronic_mail {
+    width: 12rem;
+    height: 12rem;
+}
+footer{
+    height: 10rem;
+}
+.contenedor_name_footer{
+    position: relative;
+    bottom: 5rem;
+    height: 5rem;
+}
+.contenedor_name_footer > h2{
+    font-size: 1.5rem;
+}
+.details{
+    position: relative;
+    height: 5rem;
+    bottom: 5rem;
+}
+.details > p{
+    font-size: 1.5rem;
+}
 }
 @media (max-width: 992px){
     .menu_navegacion {
@@ -2000,7 +2691,6 @@ footer{
         width: 8rem;
         height: 3.8rem;
         left: 9rem;
-        background-color: red;
     }
     .container_titulo {
         width: 100%;
@@ -2708,8 +3398,8 @@ footer{
     .container_card1 {
         width: 7rem;
         height: 3rem;
-        bottom: 30rem;
-        left: -6rem;
+        bottom: 35rem;
+        left: -8.5rem;
     }
     .container_card1 > h3{
         font-size: 0.8rem;
@@ -2720,8 +3410,8 @@ footer{
     .container_card2 {
         width: 7rem;
         height: 3rem;
-        bottom: 20rem;
-        left: 6rem;
+        bottom: 22rem;
+        left: 8.5rem;
     }
     .container_card2 > h3{
         font-size: 0.7rem;
@@ -2862,7 +3552,7 @@ footer{
         width: 100%;
     }
     .container_about_me>h3 {
-        top: -46rem;
+        top: -42rem;
         right: 0rem;
         font-size: 1.7rem;
     }
@@ -2917,7 +3607,13 @@ footer{
         width: 20rem;
         height: 20rem;
         position: relative;
-        left: 2rem;
+        left: 0rem;
+    }
+    .card_2{
+        width: 20rem;
+        height: 20rem;
+        position: relative;
+        left: 0rem;
     }
     .container_titulacion > h5{
         font-size: .9rem;
